--- a/apps/templates/metrics-server.yaml
+++ b/apps/templates/metrics-server.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   destination:
     server: https://kubernetes.default.svc
-    namespace: metrics-server
+    namespace: monitoring-prereqs
   project: default
   source:
     chart: metrics-server
