--- a/apps/templates/grafana.yaml
+++ b/apps/templates/grafana.yaml
@@ -42,7 +42,7 @@ spec:
           GF_AUTH_GENERIC_OAUTH_AUTH_URL: tbd_okta_domain_url_/oauth2/v1/authorize
           GF_AUTH_GENERIC_OAUTH_TOKEN_URL: tbd_okta_domain_url_/oauth2/v1/token
           GF_AUTH_GENERIC_OAUTH_API_URL: tbd_okta_domain_url_/oauth2/v1/userinfo
-          GF_AUTH_GENERIC_OAUTH_ROLE_ATTRIBUTE_PATH: {{ grafana_auth_gen_oauth_role_attribute_path }}
+          GF_AUTH_GENERIC_OAUTH_ROLE_ATTRIBUTE_PATH: tbd_grafana_auth_gen_oauth_role_attribute_path
         grafana.ini:
           paths:
             data: /var/lib/grafana/data
