--- a/xspdev-main-use1/apps/templates/root-app.yaml
+++ b/xspdev-main-use1/apps/templates/root-app.yaml
@@ -11,7 +11,7 @@ spec:
     namespace: default
   project: default
   source:
-    path: xspdev-main-use1/
+    path: xspdev-main-use1/apps/
     repoURL: https://github.com/nicolas-g/argocd-samples.git
     targetRevision: HEAD
   syncPolicy:
