--- a/xspdev-main-use1/apps/templates/velero-app.yaml
+++ b/xspdev-main-use1/apps/templates/velero-app.yaml
@@ -18,39 +18,37 @@ spec:
         # If using kube2iam or kiam, use the following annotation with your AWS_ACCOUNT_ID
         # and VELERO_ROLE_NAME filled in:
         podAnnotations: {}
-          #  iam.amazonaws.com/role: "arn:aws:iam::<AWS_ACCOUNT_ID>:role/<VELERO_ROLE_NAME>"
-        configuration:
-          # Cloud provider being used (e.g. aws, azure, gcp).
-          provider: aws
-          # Parameters for the `default` BackupStorageLocation. See
-          # https://velero.io/docs/v1.6/api-types/backupstoragelocation/
-          backupStorageLocation:
-            # name is the name of the backup storage location where backups should be stored. If a name is not provided,
-            # a backup storage location will be created with the name "default". Optional.
-            name:
-            # provider is the name for the backup storage location provider. If omitted
-            # `configuration.provider` will be used instead.
-            provider: aws
-            # bucket is the name of the bucket to store backups in. Required.
-            bucket: kubebucket
-            # prefix is the directory under which all Velero data should be stored within the bucket. Optional.
-            prefix:
-            config:
-             region: eu-west-1
-             s3ForcePathStyle: true
-             s3Url: velero_backups_bucket # CHANGE ME !
-
-          # Parameters for the `default` VolumeSnapshotLocation. See
-          # https://velero.io/docs/v1.6/api-types/volumesnapshotlocation/
-          volumeSnapshotLocation:
-            # name is the name of the volume snapshot location where snapshots are being taken. Required.
-            name  velero_snapshot_location # CHANGE ME !
-
-        credentials:
-          # Whether a secret should be used as the source of IAM account
-          # credentials. Set to false if, for example, using kube2iam or
-          # kiam to provide IAM credentials for the Velero pod.
-          useSecret: false
+        #   #  iam.amazonaws.com/role: "arn:aws:iam::<AWS_ACCOUNT_ID>:role/<VELERO_ROLE_NAME>"
+        # configuration:
+        #   # Cloud provider being used (e.g. aws, azure, gcp).
+        #   provider: aws
+        #   # Parameters for the `default` BackupStorageLocation. See
+        #   # https://velero.io/docs/v1.6/api-types/backupstoragelocation/
+        #   backupStorageLocation:
+        #     # name is the name of the backup storage location where backups should be stored. If a name is not provided,
+        #     # a backup storage location will be created with the name "default". Optional.
+        #     name:
+        #     # provider is the name for the backup storage location provider. If omitted
+        #     # `configuration.provider` will be used instead.
+        #     provider: aws
+        #     # bucket is the name of the bucket to store backups in. Required.
+        #     bucket: kubebucket
+        #     config:
+        #      region: eu-west-1
+        #      s3ForcePathStyle: true
+        #      s3Url: velero_backups_bucket # CHANGE ME !
+        #
+        #   # Parameters for the `default` VolumeSnapshotLocation. See
+        #   # https://velero.io/docs/v1.6/api-types/volumesnapshotlocation/
+        #   volumeSnapshotLocation:
+        #     # name is the name of the volume snapshot location where snapshots are being taken. Required.
+        #     name  velero_snapshot_location # CHANGE ME !
+        #
+        # credentials:
+        #   # Whether a secret should be used as the source of IAM account
+        #   # credentials. Set to false if, for example, using kube2iam or
+        #   # kiam to provide IAM credentials for the Velero pod.
+        #   useSecret: false
 
     repoURL: https://vmware-tanzu.github.io/helm-charts
     targetRevision: 2.23.6
