--- a/xspdev-main-use1/apps/templates/velero-app.yaml
+++ b/xspdev-main-use1/apps/templates/velero-app.yaml
@@ -17,8 +17,8 @@ spec:
         # Annotations to add to the Velero deployment's pod template. Optional.
         # If using kube2iam or kiam, use the following annotation with your AWS_ACCOUNT_ID
         # and VELERO_ROLE_NAME filled in:
-        podAnnotations: {}
-          #  iam.amazonaws.com/role: "arn:aws:iam::<AWS_ACCOUNT_ID>:role/<VELERO_ROLE_NAME>"
+        podAnnotations:
+          iam.amazonaws.com/role: "arn:aws:iam::<AWS_ACCOUNT_ID>:role/<VELERO_ROLE_NAME>"
         configuration:
           # Cloud provider being used (e.g. aws, azure, gcp).
           provider: aws
