--- a/rahul/busybox.yaml
+++ b/rahul/busybox.yaml
@@ -3,13 +3,13 @@ kind: Pod
 metadata:
   creationTimestamp: null
   labels:
-    run: busyboxx
-  name: busyboxx
+    run: busybox
+  name: busybox
   namespace: test
 spec:
   containers:
   - image: busybox
-    name: busyboxx
+    name: busybox
     resources: {}
   dnsPolicy: ClusterFirst
   restartPolicy: Always
