use http url instead of git

--- a/rancher-desktop/root-application-set.yaml
+++ b/rancher-desktop/root-application-set.yaml
@@ -10,7 +10,9 @@ spec:
   #   preserveResourcesOnDeletion: true
   generators:
     - git:
-        repoURL: git@github.com:nicolas-g/argocd-samples.git
+        # Use the `git@` version if it's a private repo and you are using a deploy ssh key
+        #repoURL: git@github.com:nicolas-g/argocd-samples.git
+        repoURL: https://github.com/nicolas-g/argocd-samples.git
         revision: master
         files:
         - path: "rancher-desktop/apps/**/config.json"
@@ -27,9 +29,13 @@ spec:
         syncOptions:
           - CreateNamespace=true
       source:
-        repoURL: git@github.com:nicolas-g/argocd-samples.git
+        # Use the `git@` version if it's a private repo and you are using a deploy ssh key
+        #repoURL: git@github.com:nicolas-g/argocd-samples.git
+        repoURL: https://github.com/nicolas-g/argocd-samples.git
         targetRevision: master
-        path: '{{path}}'
+        # path: '{{path}}'
+        #path: "rancher-desktop/apps/**/"
+        path: "rancher-desktop/apps/ngtest/"
       destination:
         server: https://kubernetes.default.svc
         namespace: '{{app.namespace}}'
