define app namespace in values files

--- a/rancher-desktop/apps/monitoring-prereqs/values.yaml
+++ b/rancher-desktop/apps/monitoring-prereqs/values.yaml
@@ -1,4 +1,11 @@
 
+
+app:
+  name: "monitoring-prereqs"
+  namespace: "monitoring"
+
+
+# helm
 kube-state-metrics:
   nodeSelector:
     beta.kubernetes.io/os: linux
